fix: Address the viewport issue on iOS devices when the software keyboard appears

--- a/src/app/page/group/group.component.scss
+++ b/src/app/page/group/group.component.scss
@@ -75,16 +75,11 @@
   }
 
   .tabs {
-    backdrop-filter: blur(10px);
     z-index: $FLOAT_ZINDEX;
-    top: $NAV_MOBILE_HEIGHT;
-
-    position: fixed;
     width: 100%;
   }
 
   .content {
-    padding-top: $TAB_HEIGHT;
     .room {
       width: 100%;
     }
