--- a/src/app/page/group/room/room.component.scss
+++ b/src/app/page/group/room/room.component.scss
@@ -9,7 +9,7 @@
 .chat {
   padding-left: 8px;
   padding-right: 8px;
-  height: calc(100% - #{$CHAT_FOOTER_HEIGHT});
+  height: 100%;
   min-width: 400px;
 }
 
